playing with styling

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,36 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.form {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-top: 50px;
 }
 
-.App-link {
-  color: #61dafb;
+.input {
+  width: 50em;
+  height: 30px;
+  border-radius: red;
+  border-radius: 20px;
+  border-width: 5px;
+  border-color: blue;
+  margin-right: 30px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* .button-container {
+  width: 10em;
+  height: 40px;
+  border-radius: 100em;
+  border: groove;
+  border-color: blue;
+  text-align: center;
+  -webkit-text-emphasis: double-circle;
+} */
+
+.button {
+  width: 10em;
+  height: 40px;
+  border-radius: 100em;
+  border: groove;
+  border-color: #e2fb8a;
+  text-align: center;
+  -webkit-text-emphasis: double-circle;
+  background: beige;
 }
