--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,16 @@
+textarea:focus,
+input:focus,
+button:focus {
+  outline: none;
+}
+
 .form {
   display: flex;
   justify-content: center;
   margin-top: 50px;
 }
 
-.input {
+.input-field {
   width: 50em;
   height: 30px;
   border-radius: red;
@@ -12,9 +18,16 @@
   border-width: 5px;
   border-color: blue;
   margin-right: 30px;
+  text-align: center;
+  font-family: cursive;
+  font-size: large;
 }
 
-/* .button-container {
+.input-field:focus {
+  border-color: coral;
+}
+
+/* .add-button-container {
   width: 10em;
   height: 40px;
   border-radius: 100em;
@@ -24,7 +37,7 @@
   -webkit-text-emphasis: double-circle;
 } */
 
-.button {
+.add-button {
   width: 10em;
   height: 40px;
   border-radius: 100em;
@@ -33,4 +46,27 @@
   text-align: center;
   -webkit-text-emphasis: double-circle;
   background: beige;
+  border-width: 5px;
+}
+
+.add-button:hover {
+  /* transform: skew(10deg, 10deg); */
+  transform: scaleX(1.3);
+  text-transform: uppercase;
+  transition-duration: 2s;
+  background-color: chartreuse;
+  border-color: coral;
+}
+
+.todo-list-container {
+  display: flex;
+  justify-content: center;
+  margin-right: 40em;
+  margin-top: 20px;
+}
+
+.todo-container {
+  font-family: cursive;
+  font-size: xx-large;
+  color: coral;
 }
